k8s-start.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: k8s-start
spec:
 replicas: 1
 selector:
   matchLabels:
     app: k8s-start
 template:
   metadata:
     labels:
       app: k8s-start
   spec:
     containers:
     - name: k8s-start
       image: wskyoung/k8s-start:0.0.1
---
apiVersion: v1
kind: Service
metadata:
 name: k8s-start
spec:
 ports:
   - name: k8s-start
     port: 80
     targetPort: 8082
 selector:
   app: k8s-start
 type: ClusterIP
