service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-start
  labels:
    run: k8s-start
spec:
  type: ClusterIP     # 서비스 타입
  ports:
  - port: 8082       # 서비스 포트
    targetPort: 8082   # 타켓, 즉 pod의 포트
    protocol: TCP
    name: http
  selector:
    app: k8s-start
