ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: k8s-ingress
spec:
 rules:
 - http:
     paths:
     - path: /test
       pathType: Prefix
       backend:
         service:
           name: k8s-start
           port:
             number: 8082
    - path: /k7s
       pathType: Prefix
       backend:
         service:
           name: k7s-start
           port:
             number: 8082
